fix spacing on info window

--- a/assets/www/css/styles.css
+++ b/assets/www/css/styles.css
@@ -6,7 +6,7 @@ body { height: 100%; margin: 0; padding: 0; font-family: verdana, sans-serif; }
 .info-window {
 	display: none;
 	font-size: 0.6em;
-	width: 100px;
+	max-width:200px;
 }
 .name {
 	font-size: 1.2em;
